--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "ai-hair-stylist",
-    "version": "1.0.0",
-    "description": "AI 헤어스타일 미리보기 + 쿠팡 파트너스 추천 상품 웹앱",
-    "main": "server.js",
-    "type": "module",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2"
-    }
+  "name": "ai-hair-stylist",
+  "version": "1.0.0",
+  "description": "AI 헤어스타일 미리보기 + 쿠팡 파트너스 추천 상품 웹앱",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "openai": "^4.0.0"
   }
-  
+}
